--- a/package.json
+++ b/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "vue-bpmn",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@sscfaith/vue-bpmn",
+  "version": "0.0.2",
+  "author": {
+    "name": "SSC",
+    "url": "https://github.com/sscfaith",
+    "email": "273702440@qq.com"
+  },
+  "main": "lib/index.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name VueBpmn --dest lib --filename index --formats umd-min ./packages/index.vue",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "bpmn-js": "^7.3.0",
+    "bpmnlint": "^6.4.0",
+    "monaco-editor": "^0.21.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.6",
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/cli-service": "^4.5.6",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "core-js": "^3.6.5",
+    "eslint": "^7.10.0",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
@@ -34,11 +43,33 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-debugger": "off",
+      "no-console": "off",
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "files": [
+    "lib"
+  ],
+  "repository": {
+    "type": "github",
+    "url": "https://github.com/sscfaith/vue-bpmn"
+  },
+  "keywords": [
+    "vue",
+    "element-ui",
+    "bpmn",
+    "bpmn.js",
+    "flow",
+    "flowable",
+    "activiti",
+    "camunda"
+  ],
+  "license": "MIT"
 }
